change service to remote driver

--- a/Seo.Crawler.Service/App.config
+++ b/Seo.Crawler.Service/App.config
@@ -9,5 +9,5 @@
   <CrawlerOptions FolderPath="C:/AgileBet/Seo"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
                   MaxPageToVisit="10000"
-                  StartUrl="https://preview.188bet.com/"></CrawlerOptions>
+                  StartUrl="https://preview.188bet.com/" RemoteHubUrl="http://localhost:4500/wd/hub" ></CrawlerOptions>
 </configuration>
