--- a/Seo.Crawler.Service/NLog.config
+++ b/Seo.Crawler.Service/NLog.config
@@ -36,7 +36,7 @@
 
   </targets>
   <rules>
-    <logger name="*" levels="Trace, Debug, Info, Warn, Error" writeTo="file, console" />
+    <logger name="*" levels="Trace, Debug, Info, Warn, Error" writeTo="file, console,eventLog" />
     <logger name="*" level="Fatal" writeTo="fatalFile, console, eventLog" />
   </rules>
 </nlog>
