--- a/Seo.Crawler.Service/packages.config
+++ b/Seo.Crawler.Service/packages.config
@@ -4,6 +4,7 @@
   <package id="NLog.Config" version="4.2.3" targetFramework="net45" />
   <package id="NLog.Schema" version="4.0.1" targetFramework="net45" />
   <package id="Selenium.RC" version="2.52.0" targetFramework="net45" />
+  <package id="Selenium.Support" version="2.52.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.52.0" targetFramework="net45" />
   <package id="Selenium.WebDriverBackedSelenium" version="2.52.0" targetFramework="net45" />
 </packages>
