change by language

--- a/Seo.Crawler.Service/App.config
+++ b/Seo.Crawler.Service/App.config
@@ -8,6 +8,6 @@
     </startup>
   <CrawlerOptions FolderPath="C:/AgileBet/Seo"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
-                  MaxPageToVisit="10000"
-                  StartUrl="https://preview.188bet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  MaxThread="1"></CrawlerOptions>
+                  MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp;"
+                  StartUrl="http://new.star.avabet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  MaxThread="1"></CrawlerOptions>
 </configuration>
