add change to mobile and web

--- a/Seo.Crawler.Service/App.config
+++ b/Seo.Crawler.Service/App.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="CrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
+    <section name="WebCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
+    <section name="MobileCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
   </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
-  <CrawlerOptions FolderPath="C:/AgileBet/Seo"
+  <WebCrawlerOptions FolderPath="C:/AgileBet/Seo/snapshot" Name="Web"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
-                  MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp;"
-                  StartUrl="http://new.star.avabet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  MaxThread="1"></CrawlerOptions>
+                  MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp"
+                  StartUrl="https://preview.188bet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  ></WebCrawlerOptions>
+  <MobileCrawlerOptions FolderPath="C:/AgileBet/Seo/snapshot.mobile" Name="Mobile"
+                  UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
+                  MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp"
+                  StartUrl="https://m.188bet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  ></MobileCrawlerOptions>
 </configuration>
