--- a/Seo.Crawler.Service/Seo.Crawler.Service.csproj
+++ b/Seo.Crawler.Service/Seo.Crawler.Service.csproj
@@ -104,6 +104,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="ServiceReInstaller.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ProjectInstaller.resx">
