--- a/Seo.Crawler.Service/App.config
+++ b/Seo.Crawler.Service/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="WebCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
     <section name="MobileCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
+    <section name="TimeInterval" type="Seo.Crawler.Service.TimeInterval, Seo.Crawler.Service" />
   </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -10,9 +11,11 @@
   <WebCrawlerOptions FolderPath="C:/AgileBet/Seo/snapshot" Name="Web"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
                   MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp"
-                  StartUrl="https://preview.188bet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  ></WebCrawlerOptions>
+                  StartUrl="https://preview.188bet.com/" Run="false" RemoteHubUrl="http://localhost:4600/wd/hub"  ></WebCrawlerOptions>
   <MobileCrawlerOptions FolderPath="C:/AgileBet/Seo/snapshot.mobile" Name="Mobile"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
                   MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp"
-                  StartUrl="https://m.188bet.com/" RemoteHubUrl="http://localhost:4600/wd/hub"  ></MobileCrawlerOptions>
+                  StartUrl="https://m.188bet.com/" Run="false" RemoteHubUrl="http://localhost:4600/wd/hub"  ></MobileCrawlerOptions>
+
+  <TimeInterval time="1000" > </TimeInterval>
 </configuration>
