Add to UK , NON UK Settings

--- a/Seo.Crawler.Service/App.config
+++ b/Seo.Crawler.Service/App.config
@@ -3,19 +3,29 @@
   <configSections>
     <section name="WebCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
     <section name="MobileCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
+    <section name="UKWebCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
+    <section name="UKMobileCrawlerOptions" type="Seo.Crawler.Service.CrawlerOptions, Seo.Crawler.Service" />
     <section name="TimeInterval" type="Seo.Crawler.Service.TimeInterval, Seo.Crawler.Service" />
   </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
-  <WebCrawlerOptions FolderPath="C:/AgileBet/Seo/snapshot" Name="Web"
+  <WebCrawlerOptions FolderPath="C:/AgileBet/share/snapshot" Name="Web"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
                   MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp"
-                  StartUrl="https://preview.188bet.com/" Run="true" RemoteHubUrl="http://localhost:4600/wd/hub"  ></WebCrawlerOptions>
-  <MobileCrawlerOptions FolderPath="C:/AgileBet/Seo/snapshot.mobile" Name="Mobile"
+                  StartUrl="https://www.188bet.com/" Run="true" RemoteHubUrl="http://localhost:4600/wd/hub"  ></WebCrawlerOptions>
+  <MobileCrawlerOptions FolderPath="C:/AgileBet/share/snapshot.mobile" Name="Mobile"
                   UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
                   MaxPageToVisit="10000" Languages="en-gb;zh-cn;vi-vn;th-th;ko-kr;id-id;pt-br;km-kh;ja-jp"
-                  StartUrl="https://m-preview.188bet.com/" Run="false" RemoteHubUrl="http://localhost:4600/wd/hub"  ></MobileCrawlerOptions>
+                  StartUrl="https://m.188bet.com/" Run="true" RemoteHubUrl="http://localhost:4600/wd/hub"  ></MobileCrawlerOptions>
+  <UKWebCrawlerOptions FolderPath="C:/AgileBet/share/uksnapshot" Name="WebUK"
+                  UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
+                  MaxPageToVisit="10000" Languages="en-gb;zh-cn"
+                  StartUrl="https://www.188bet.co.uk/" Run="true" RemoteHubUrl="http://localhost:4600/wd/hub"  ></UKWebCrawlerOptions>
+  <UKMobileCrawlerOptions FolderPath="C:/AgileBet/share/uksnapshot.mobile" Name="MobileUK"
+                  UserAgent="Mozilla/5.0 (Macintosh; Intel Mac OS X) seo.crawler"
+                  MaxPageToVisit="10000" Languages="en-gb;zh-cn"
+                  StartUrl="https://m.188bet.co.uk/" Run="true" RemoteHubUrl="http://localhost:4600/wd/hub"  ></UKMobileCrawlerOptions>
 
   <TimeInterval time="7200000" > </TimeInterval>
 </configuration>
